--- a/Onlinebookstore/pom.xml
+++ b/Onlinebookstore/pom.xml
@@ -65,5 +65,12 @@
     <artifactId>selenium-java</artifactId>
     <version>3.8.1</version>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+<dependency>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.7.0.1746</version>
+</dependency>
+
   	</dependencies>
 </project>
