--- a/Onlinebookstoresystem-master/Jenkinsfile
+++ b/Onlinebookstoresystem-master/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline{
                     
                     steps{
                             script {        
-                                        withSonarQubeEnv(credentialsId:'Sonar', installationName:'Sonar'){   
+                                        withSonarQubeEnv('Sonar'){   
                         
                                         bat 'mvn -f Onlinebookstore/pom.xml org.sonarsource.scanner.maven:sonar-maven-plugin:3.6.0.1398:sonar'
                      
