--- a/Onlinebookstore/sonar-project.properties
+++ b/Onlinebookstore/sonar-project.properties
@@ -6,6 +6,6 @@ sonar.host.url=http://localhost:9000
 
 #----- Default source code encoding
 sonar.sourceEncoding=UTF-8
-projectKey=bookstoreTestcases:Onlinebookstore
+sonar.projectKey=bookstoreTestcases:Onlinebookstore
 sonar.login=admin
 sonar.password=admin
